--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -143,6 +143,10 @@
     "all_levels": "All Levels",
     "search_logs": "Search logs...",
     "autoscroll": "Autoscroll",
+    "monitor_cpu": "CPU",
+    "monitor_ram": "RAM",
+    "monitor_gpu": "GPU",
+    "monitor_disk_free": "Disk",
     "general_tab_title": "General",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "💾 Model:",
