--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -144,6 +144,10 @@
     "all_levels": "Все уровни",
     "search_logs": "Поиск по логам...",
     "autoscroll": "Автопрокрутка",
+    "monitor_cpu": "ЦП",
+    "monitor_ram": "ОЗУ",
+    "monitor_gpu": "ГП",
+    "monitor_disk_free": "Диск",
     "general_tab_title": "Общие",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "💾 Модель:",
