--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -143,6 +143,10 @@
     "all_levels": "Всі рівні",
     "search_logs": "Пошук по логах...",
     "autoscroll": "Автопрокрутка",
+    "monitor_cpu": "ЦП",
+    "monitor_ram": "ОЗП",
+    "monitor_gpu": "ГП",
+    "monitor_disk_free": "Диск",
     "general_tab_title": "Загальні",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "💾 Модель:",
