--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -61,6 +61,7 @@
     "balance": "Баланс",
     "balance_error": "Баланс: Ошибка",
     "models": "💾 Модели",
+    "ai_assistant_model": "💾 Модель AI Ассистента:",
     "enter_model_name": "Введите название модели",
     "add_model": "Добавить",
     "remove_model": "Удалить",
