--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -61,6 +61,7 @@
     "balance": "Баланс",
     "balance_error": "Баланс: Помилка",
     "models": "💾 Моделі",
+    "ai_assistant_model": "💾 Модель AI Асистента:",
     "enter_model_name": "Введіть назву моделі",
     "add_model": "Додати",
     "remove_model": "Видалити",
