--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,6 +2,14 @@
     "maximum_tokens": "Maximum",
     "help_title": "Information",
     "notification_tab": "Notifications",
+    "text_split_count_label": "💾 Sync: Images with Audio:",
+    "text_split_count_help": "<b>Image Synchronization with Audio</b><br>Splits the text into segments to create a separate image for each segment.<br><br><b>How it works:</b><br>• <b>Disabled:</b> The program generates a fixed number of images (Prompt Count) for the entire text.<br>• <b>Number (e.g., 5):</b> The program divides the text into 5 logical parts. Each part gets its own image, synchronized with the audio duration of that part.<br><br><i>Recommended for creating videos where the image precisely matches the narration.</i>",
+    "text_split_count_disabled": "Disabled (One Prompt)",
+    "generation_mode_label": "💾 Generation Mode:",
+    "gen_mode_standard": "Standard (Spread over video)",
+    "gen_mode_sync": "Sync with Audio (Segments)",
+    "generation_mode_help": "<b>Generation Mode</b><br>Choose how images are generated and placed.<br><br><b>1. Standard (Spread over video):</b><br>Generates a fixed number of images (e.g., 10) based on the entire text prompt. These images are spaced evenly throughout the video duration.<br><i>Best for: Abstract backgrounds, loosely related visuals.</i><br><br><b>2. Sync with Audio (Segments):</b><br>Splits your script into logical segments (sentences/paragraphs). Generates one unique image for EACH segment, perfectly timed to the audio of that segment.<br><i>Best for: Storytelling, educational videos, specific scene visualization.</i>",
+    "segment_count_label": "💾 Segments Count:",
     "enable_notifications_label": "Enable notifications",
     "telegram_user_id_label": "Telegram User ID",
     "bot_link_info": "Link to bot:",
