--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -2,6 +2,14 @@
     "maximum_tokens": "Максимум",
     "help_title": "Информация",
     "notification_tab": "Уведомления",
+    "text_split_count_label": "💾 Синхронизация: Картинки с аудио:",
+    "text_split_count_help": "<b>Синхронизация картинок с аудио</b><br>Разбивает текст на сегменты, чтобы создать отдельную картинку под каждый кусок текста.<br><br><b>Как это работает:</b><br>• <b>Отключено (Disabled):</b> Программа генерирует фиксированное количество картинок (Prompt Count) на весь текст.<br>• <b>Число (напр. 5):</b> Программа делит текст на 5 логических частей. Каждая часть получает свою картинку, которая синхронизируется с длительностью озвучки этой части.<br><br><i>Рекомендуется для создания видео, где изображение должно точно соответствовать повествованию.</i>",
+    "text_split_count_disabled": "Отключено (Один запрос)",
+    "generation_mode_label": "💾 Режим генерации:",
+    "gen_mode_standard": "Стандартный (Растянуть на видео)",
+    "gen_mode_sync": "Синхронизация (Сегменты)",
+    "generation_mode_help": "<b>Режим Генерации</b><br>Выберите, как создаются и размещаются картинки.<br><br><b>1. Стандартный (Растянуть на видео):</b><br>Создает фиксированное количество картинок (напр., 10) на основе всего текста. Картинки равномерно распределяются по длине видео.<br><i>Лучше для: Абстрактных фонов, общих визуализаций.</i><br><br><b>2. Синхронизация (Сегменты):</b><br>Делит ваш текст на логические части (предложения/абзацы). Создает отдельную уникальную картинку для КАЖДОГО сегмента, которая идеально синхронизируется с озвучкой.<br><i>Лучше для: Рассказов, обучающих видео, точной иллюстрации сцен.</i>",
+    "segment_count_label": "💾 Количество сегментов:",
     "enable_notifications_label": "Включить уведомления",
     "telegram_user_id_label": "Telegram ID пользователя",
     "bot_link_info": "Ссылка на бота:",
