--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -2,6 +2,14 @@
     "maximum_tokens": "Максимум",
     "help_title": "Інформація",
     "notification_tab": "Сповіщення",
+    "text_split_count_label": "💾 Синхронізація: Картинки з аудіо:",
+    "text_split_count_help": "<b>Синхронізація картинок з аудіо</b><br>Розбиває текст на сегменти, щоб створити окрему картинку під кожен шматок тексту.<br><br><b>Як це працює:</b><br>• <b>Вимкнено (Disabled):</b> Програма генерує фіксовану кількість картинок (Prompt Count) на весь текст.<br>• <b>Число (напр. 5):</b> Програма ділить текст на 5 логічних частин. Кожна частина отримує свою картинку, яка синхронізується з тривалістю озвучки цієї частини.<br><br><i>Рекомендовано для створення відео, де зображення має точно відповідати розповіді.</i>",
+    "text_split_count_disabled": "Вимкнено (Один запит)",
+    "generation_mode_label": "💾 Режим генерації:",
+    "gen_mode_standard": "Стандартний (Розтягнути на відео)",
+    "gen_mode_sync": "Синхронізація (Сегменти)",
+    "generation_mode_help": "<b>Режим Генерації</b><br>Оберіть, як створюються та розміщуються картинки.<br><br><b>1. Стандартний (Розтягнути на відео):</b><br>Створює фіксовану кількість картинок (напр., 10) на основі всього тексту. Картинки рівномірно розподіляються по довжині відео.<br><i>Краще для: Абстрактних фонів, загальних візуалізацій.</i><br><br><b>2. Синхронізація (Сегменти):</b><br>Ділить ваш текст на логічні частини (речення/абзаци). Створює окрему унікальну картинку для КОЖНОГО сегменту, яка ідеально синхронізується з озвучкою.<br><i>Краще для: Розповідей, навчальних відео, точної ілюстрації сцен.</i>",
+    "segment_count_label": "💾 Кількість сегментів:",
     "enable_notifications_label": "Увімкнути сповіщення",
     "telegram_user_id_label": "Telegram ID користувача",
     "bot_link_info": "Посилання на бота:",
