--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -89,5 +89,6 @@
     "mass_edit_hint": "Ця кнопка дозволяє масово редагувати один параметр у багатьох шаблонах одночасно. Наприклад, якщо ви хочете змінити модель перекладу на 'gpt-4o' у всіх ваших шаблонах, просто оберіть параметр 'Модель перекладу', вкажіть нове значення та виберіть шаблони, до яких застосувати зміни.",
     "preview_prompt_tooltip": "Шаблон для генерації промптів. Використовуйте {story} для тексту та {title} для назви завдання.",
     "preview_image_count_tooltip": "Кількість зображень для генерації (1-4).",
-    "initial_video_label": "Виберіть відеофайл, який буде програватися на самому початку монтажу. Після завершення цього відео буде пауза 1 секунда (стоп-кадр) перед початком основного аудіо та картинок. Корисно для інтро або брендингу каналу."
+    "initial_video_label": "Виберіть відеофайл, який буде програватися на самому початку монтажу. Після завершення цього відео буде пауза 1 секунда (стоп-кадр) перед початком основного аудіо та картинок. Корисно для інтро або брендингу каналу.",
+    "overlay_triggers_group": "📅 Динамічні оверлеї (Тригери)\n\nДозволяє накладати візуальні ефекти або картинки в конкретні моменти відео.\n\nТипи тригерів:\n- Фраза в тексті: Ефект з'явиться, коли диктор почне вимовляти вказану фразу (визначається по субтитрах).\n- Час: Ефект з'явиться на вказаній секунді (наприклад, '15' або '01:30').\n\nФайл ефекту повинен бути відео (бажано з альфа-каналом) або картинкою. Ефект триватиме стільки, скільки триває файл (або 5 секунд для картинок)."
 }
