--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -89,5 +89,6 @@
     "mass_edit_hint": "Эта кнопка позволяет вам массово изменить один параметр во многих шаблонах одновременно. Например, если вы хотите изменить модель перевода на 'gpt-4o' во всех ваших шаблонах, просто выберите параметр 'Модель перевода', укажите новое значение и выберите шаблоны, к которым применить изменения.",
     "preview_prompt_tooltip": "Шаблон для генерации промптов. Используйте {story} для текста и {title} для названия задачи.",
     "preview_image_count_tooltip": "Количество изображений для генерации (1-4).",
-    "initial_video_label": "Выберите видеофайл, который будет проигрываться в самом начале монтажа. После завершения этого видео будет пауза 1 секунда (стоп-кадр) перед началом основного аудио и картинок. Полезно для интро или брендинга канала."
+    "initial_video_label": "Выберите видеофайл, который будет проигрываться в самом начале монтажа. После завершения этого видео будет пауза 1 секунда (стоп-кадр) перед началом основного аудио и картинок. Полезно для интро или брендинга канала.",
+    "overlay_triggers_group": "📅 Динамические оверлеи (Триггеры)\n\nПозволяет накладывать визуальные эффекты или картинки в конкретные моменты видео.\n\nТипы триггеров:\n- Фраза в тексте: Эффект появится, когда диктор начнет произносить указанную фразу (определяется по субтитрам).\n- Время: Эффект появится на указанной секунде (например, '15' или '01:30').\n\nФайл эффекта должен быть видео (желательно с альфа-каналом) или картинкой. Эффект будет длиться столько, сколько длится файл (или 5 секунд для картинок)."
 }
