--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -135,6 +135,10 @@
     "collapse_jobs": "Collapse Jobs",
     "collapse_all": "Collapse All",
     "tokens_label": "💾 Max tokens:",
+    "tokens_translation_label": "💾 Max Tokens (Translation):",
+    "tokens_rewrite_label": "💾 Max Tokens (Rewrite):",
+    "temperature_translation_label": "💾 Temperature (Translation):",
+    "temperature_rewrite_label": "💾 Temperature (Rewrite):",
     "start_processing": "Start Processing",
     "processing_complete_title": "Processing Complete",
     "processing_complete_message": "Queue processing has finished.\n\nTotal time: {}\n",
@@ -464,8 +468,12 @@
     "new_value": "New value:",
     "target_templates": "Select templates:",
     "apply_changes": "Apply Changes",
-    "select_setting": "Select Setting",
-    "select_setting_hint": "Select the setting you want to change across multiple templates.",
+    "select_setting": "Select Setting...",
+    "select_setting_hint": "Select the parameter you want to change in all selected templates. Note: some complex parameters (e.g., trigger lists) may be unavailable for mass editing.",
+    "prompt_standard_label": "💾 Prompt (Standard):",
+    "prompt_sync_label": "💾 Prompt (Sync):",
+    "prompt_fallback_label": "💾 Prompt (Fallback):",
+    "overlay_triggers_label": "💾 Effect Triggers:",
     "mass_edit_success": "Successfully updated {count} templates.",
     "eleven_unlim_settings_title": "ElevenLabs Unlimited",
     "image_height_label": "💾 Height:",
