--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -136,6 +136,10 @@
     "collapse_jobs": "Свернуть задачи",
     "collapse_all": "Свернуть все",
     "tokens_label": "💾 Макс. токенов:",
+    "tokens_translation_label": "💾 Макс. токенов (Перевод):",
+    "tokens_rewrite_label": "💾 Макс. токенов (Рерайт):",
+    "temperature_translation_label": "💾 Температура (Перевод):",
+    "temperature_rewrite_label": "💾 Температура (Рерайт):",
     "start_processing": "Начать обработку",
     "processing_complete_title": "Обработка завершена",
     "processing_complete_message": "Обработка очереди завершена.\n\nОбщее время: {}",
@@ -465,8 +469,12 @@
     "new_value": "Новое значение:",
     "target_templates": "Выберите шаблоны:",
     "apply_changes": "Применить изменения",
-    "select_setting": "Выберите параметр",
-    "select_setting_hint": "Выберите настройку, которую вы хотите изменить в нескольких шаблонах одновременно.",
+    "select_setting": "Выберите настройку...",
+    "select_setting_hint": "Выберите параметр, который вы хотите изменить во всех выбранных шаблонах. Обратите внимание: некоторые сложные параметры (например, списки триггеров) могут быть недоступны для массового редактирования.",
+    "prompt_standard_label": "💾 Промт (Стандарт):",
+    "prompt_sync_label": "💾 Промт (Синхро):",
+    "prompt_fallback_label": "💾 Промт (Резерв):",
+    "overlay_triggers_label": "💾 Триггеры эффектов:",
     "mass_edit_success": "Успешно обновлено {count} шаблонов.",
     "eleven_unlim_settings_title": "ElevenLabs Unlimited",
     "image_height_label": "Высота:",
