--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -135,6 +135,10 @@
     "collapse_jobs": "Згорнути завдання",
     "collapse_all": "Згорнути все",
     "tokens_label": "💾 Макс. токенів:",
+    "tokens_translation_label": "💾 Макс. токенів (Переклад):",
+    "tokens_rewrite_label": "💾 Макс. токенів (Рерайт):",
+    "temperature_translation_label": "💾 Температура (Переклад):",
+    "temperature_rewrite_label": "💾 Температура (Рерайт):",
     "start_processing": "Почати обробку",
     "processing_complete_title": "Обробку завершено",
     "processing_complete_message": "Обробку черги завершено.\n\nЗагальний час: {}",
@@ -461,6 +465,8 @@
     "start_working": "Почати роботу",
     "mass_edit_button": "Масове редагування",
     "mass_edit_title": "Масове редагування шаблонів",
+    "select_setting_hint": "Оберіть параметр, який ви хочете змінити у всіх вибраних шаблонах. Зверніть увагу: деякі складні параметри (наприклад, списки тригерів) можуть бути недоступні для масового редагування.",
+    "select_setting": "Оберіть налаштування...",
     "select_parameter": "Оберіть параметр для зміни:",
     "new_value": "Нове значення:",
     "target_templates": "Оберіть шаблони:",
@@ -483,7 +489,11 @@
     "elevenlabs_unlim_api_key": "💾 Ключ API ElevenLabsUnlimited:",
     "language_prompt_label": "💾 Промт для цієї мови:",
     "translation_model_label": "💾 Модель для перекладу:",
+    "prompt_standard_label": "💾 Промт (Стандарт):",
+    "prompt_sync_label": "💾 Промт (Синхро):",
+    "prompt_fallback_label": "💾 Промт (Резерв):",
     "prompt_content_label": "💾 Промт для генерації зображень:",
+    "overlay_triggers_label": "💾 Тригери ефектів:",
     "image_model_label": "💾 Модель для зображень:",
     "template_changes_title": "Підтвердження змін шаблону",
     "template_changes_intro": "Наступні налаштування будуть змінені:",
