--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -85,7 +85,12 @@
     "prompts_settings_label": "Prompts Settings",
     "preview_settings_group": "Preview Settings",
     "preview_prompt_label": "💾 Preview Prompt:",
-    "preview_image_count_label": "💾 Image Count:",
+    "preview_image_count_label": "💾 Preview Image Count:",
+    "preview_image_provider_label": "💾 Preview Image Generation Service:",
+    "preview_pollinations_model_label": "💾 Preview Pollinations Model:",
+    "preview_model_label": "💾 Preview AI Model (Prompt Gen):",
+    "preview_tokens_label": "💾 Preview Max Tokens:",
+    "preview_temp_label": "💾 Preview Temperature:",
     "montage_settings_label": "Montage Settings",
     "subtitles_settings_label": "Subtitles Settings",
     "templates_settings_label": "Templates Settings",
