--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -85,7 +85,12 @@
     "prompts_settings_label": "Настройки промтов",
     "preview_settings_group": "Настройки Превью",
     "preview_prompt_label": "💾 Промпт для превью:",
-    "preview_image_count_label": "💾 Количество изображений:",
+    "preview_image_count_label": "💾 Количество изображений для превью:",
+    "preview_image_provider_label": "💾 Сервис генерации изображений для превью:",
+    "preview_pollinations_model_label": "💾 Модель Pollinations для превью:",
+    "preview_model_label": "💾 Модель AI для превью (генератор промптов):",
+    "preview_tokens_label": "💾 Макс. токенов для превью:",
+    "preview_temp_label": "💾 Температура для превью:",
     "montage_settings_label": "Настройки монтажа",
     "subtitles_settings_label": "Настройки субтитров",
     "templates_settings_label": "Настройки шаблонов",
