--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -85,7 +85,12 @@
     "prompts_settings_label": "Налаштування промтів",
     "preview_settings_group": "Налаштування Прев'ю",
     "preview_prompt_label": "💾 Промпт для прев'ю:",
-    "preview_image_count_label": "💾 Кількість зображень:",
+    "preview_image_count_label": "💾 Кількість зображень для прев'ю:",
+    "preview_image_provider_label": "💾 Сервіс генерації зображень для прев'ю:",
+    "preview_pollinations_model_label": "💾 Модель Pollinations для прев'ю:",
+    "preview_model_label": "💾 Модель AI для прев'ю (генератор промпту):",
+    "preview_tokens_label": "💾 Макс. токенів для прев'ю:",
+    "preview_temp_label": "💾 Температура для прев'ю:",
     "montage_settings_label": "Налаштування монтажу",
     "subtitles_settings_label": "Налаштування субтитрів",
     "templates_settings_label": "Налаштування шаблонів",
