--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -541,5 +541,7 @@
     "trigger_settings_tooltip": "Сдвинуть эффект по осям",
     "cancel_button": "Отмена",
     "trigger_horizontal": "Горизонталь (X):",
-    "trigger_vertical": "Вертикаль (Y):"
+    "trigger_vertical": "Вертикаль (Y):",
+    "simulation_target_label": "💾 Имитация программы монтажа:",
+    "simulation_target_help": "<b>Имитация программы монтажу</b><br>Выберите программу, под которую будут подделаны метаданные видеофайла (для YouTube и т.д.).<br>Например, <i>DaVinci Resolve Studio</i> добавит теги Blackmagic, NCLX цвет и TimeCode."
 }
