--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -548,5 +548,7 @@
     "trigger_settings_tooltip": "Зсунути ефект по осях",
     "cancel_button": "Скасувати",
     "trigger_horizontal": "Горизонталь (X):",
-    "trigger_vertical": "Вертикаль (Y):"
+    "trigger_vertical": "Вертикаль (Y):",
+    "simulation_target_label": "💾 Імітація програми монтажу:",
+    "simulation_target_help": "<b>Імітація програми монтажу</b><br>Виберіть програму, під яку будуть підроблені метадані відеофайлу (для YouTube тощо).<br>Наприклад, <i>DaVinci Resolve Studio</i> додасть теги Blackmagic, NCLX колір та TimeCode."
 }
