--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -479,6 +479,7 @@
     "select_setting_hint": "Выберите параметр, который вы хотите изменить во всех выбранных шаблонах. Обратите внимание: некоторые сложные параметры (например, списки триггеров) могут быть недоступны для массового редактирования.",
     "prompt_standard_label": "💾 Промт (Стандарт):",
     "prompt_sync_label": "💾 Промт (Синхро):",
+    "character_prompt_label": "💾 Промт для определения персонажей:",
     "prompt_fallback_label": "💾 Промт (Резерв):",
     "overlay_triggers_label": "💾 Триггеры эффектов:",
     "mass_edit_success": "Успешно обновлено {count} шаблонов.",
