--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -497,6 +497,7 @@
     "translation_model_label": "💾 Модель для перекладу:",
     "prompt_standard_label": "💾 Промт (Стандарт):",
     "prompt_sync_label": "💾 Промт (Синхро):",
+    "character_prompt_label": "💾 Промт для визначення персонажів:",
     "prompt_fallback_label": "💾 Промт (Резерв):",
     "prompt_content_label": "💾 Промт для генерації зображень:",
     "overlay_triggers_label": "💾 Тригери ефектів:",
