--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -68,8 +68,8 @@
     "balance_loading": "Balance: Loading...",
     "balance": "Balance",
     "balance_error": "Balance: Error",
-    "models": "💾 Models",
-    "ai_assistant_model": "💾 AI Assistant Model:",
+    "models": "Models",
+    "ai_assistant_model": "AI Assistant Model:",
     "enter_model_name": "Enter model name",
     "add_model": "Add",
     "remove_model": "Remove",
@@ -118,7 +118,7 @@
     "browse_button": "Browse...",
     "select_directory": "Select Folder",
     "image_review_label": "💾 Image Review:",
-    "simultaneous_montage_label": "💾 Simultaneous Montage & Subtitles:",
+    "simultaneous_montage_label": "Simultaneous Montage & Subtitles:",
     "detailed_logging_label": "Detailed logging:",
     "queue_tab": "Queue",
     "add_to_queue": "Add to Queue",
