--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -68,8 +68,8 @@
     "balance_loading": "Баланс: Загрузка...",
     "balance": "Баланс",
     "balance_error": "Баланс: Ошибка",
-    "models": "💾 Модели",
-    "ai_assistant_model": "💾 Модель AI Ассистента:",
+    "models": "Модели",
+    "ai_assistant_model": "Модель AI Ассистента:",
     "enter_model_name": "Введите название модели",
     "add_model": "Добавить",
     "remove_model": "Удалить",
@@ -119,7 +119,7 @@
     "browse_button": "Обзор...",
     "select_directory": "Выберите папку",
     "image_review_label": "💾 Контроль изображений:",
-    "simultaneous_montage_label": "💾 Одновременный монтаж и субтитры:",
+    "simultaneous_montage_label": "Одновременный монтаж и субтитры:",
     "detailed_logging_label": "Детальное логирование:",
     "queue_tab": "Очередь",
     "add_to_queue": "Добавить в очередь",
