--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -68,8 +68,8 @@
     "balance_loading": "Баланс: Завантаження...",
     "balance": "Баланс",
     "balance_error": "Баланс: Помилка",
-    "models": "💾 Моделі",
-    "ai_assistant_model": "💾 Модель AI Асистента:",
+    "models": "Моделі",
+    "ai_assistant_model": "Модель AI Асистента:",
     "enter_model_name": "Введіть назву моделі",
     "add_model": "Додати",
     "remove_model": "Видалити",
@@ -119,7 +119,7 @@
     "browse_button": "Огляд...",
     "select_directory": "Виберіть папку",
     "image_review_label": "💾 Контроль зображень:",
-    "simultaneous_montage_label": "💾 Одночасний монтаж та субтитри:",
+    "simultaneous_montage_label": "Одночасний монтаж та субтитри:",
     "detailed_logging_label": "Детальне логування:",
     "queue_tab": "Черга",
     "add_to_queue": "Додати до черги",
