--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -545,5 +545,14 @@
     "trigger_horizontal": "Горизонталь (X):",
     "trigger_vertical": "Вертикаль (Y):",
     "simulation_target_label": "💾 Имитация программы монтажа:",
-    "simulation_target_help": "<b>Имитация программы монтажу</b><br>Выберите программу, под которую будут подделаны метаданные видеофайла (для YouTube и т.д.).<br>Например, <i>DaVinci Resolve Studio</i> добавит теги Blackmagic, NCLX цвет и TimeCode."
+    "simulation_target_help": "<b>Имитация программы монтажу</b><br>Выберите программу, под которую будут подделаны метаданные видеофайла (для YouTube и т.д.).<br>Например, <i>DaVinci Resolve Studio</i> добавит теги Blackmagic, NCLX цвет и TimeCode.",
+    "shutdown_after_processing": "Выключение ПК после завершения",
+    "action_shutdown": "Выключение",
+    "action_hibernate": "Гибернация",
+    "action_sleep": "Сон",
+    "power_action_label": "Действие:",
+    "auto_shutdown_title": "Автоматическое выключение",
+    "auto_shutdown_info": "Компьютер выполнит действие '{action}' через {seconds} сек.",
+    "cancel_action_button": "Отмена",
+    "perform_now_button": "Выполнить сейчас"
 }
