--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -552,5 +552,14 @@
     "trigger_horizontal": "Горизонталь (X):",
     "trigger_vertical": "Вертикаль (Y):",
     "simulation_target_label": "💾 Імітація програми монтажу:",
-    "simulation_target_help": "<b>Імітація програми монтажу</b><br>Виберіть програму, під яку будуть підроблені метадані відеофайлу (для YouTube тощо).<br>Наприклад, <i>DaVinci Resolve Studio</i> додасть теги Blackmagic, NCLX колір та TimeCode."
+    "simulation_target_help": "<b>Імітація програми монтажу</b><br>Виберіть програму, під яку будуть підроблені метадані відеофайлу (для YouTube тощо).<br>Наприклад, <i>DaVinci Resolve Studio</i> додасть теги Blackmagic, NCLX колір та TimeCode.",
+    "shutdown_after_processing": "Вимкнення ПК після завершення",
+    "action_shutdown": "Вимкнення",
+    "action_hibernate": "Гібернація",
+    "action_sleep": "Сон",
+    "power_action_label": "Дія:",
+    "auto_shutdown_title": "Автоматичне вимкнення",
+    "auto_shutdown_info": "Комп'ютер виконає дію '{action}' через {seconds} сек.",
+    "cancel_action_button": "Скасувати",
+    "perform_now_button": "Виконати зараз"
 }
