--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -554,5 +554,14 @@
     "auto_shutdown_title": "Автоматическое выключение",
     "auto_shutdown_info": "Компьютер выполнит действие '{action}' через {seconds} сек.",
     "cancel_action_button": "Отмена",
-    "perform_now_button": "Выполнить сейчас"
+    "perform_now_button": "Выполнить сейчас",
+    "cleanup_group_title": "Очистка временных файлов",
+    "auto_cleanup_label": "💾 Включить автоочистку",
+    "cleanup_images_label": "images (папка с картинками)",
+    "cleanup_image_prompts_label": "image_prompts.txt (файл с промтами для генерации картинок)",
+    "cleanup_translation_label": "translation.txt (файл с переводом после редактирования)",
+    "cleanup_translation_orig_label": "translation_orig.txt (оригинальный файл перевода)",
+    "cleanup_voice_ass_label": "voice.ass (файл субтитров)",
+    "cleanup_voice_mp3_label": "voice.mp3 (файл озвучки)",
+    "auto_cleanup_help": "<b>Автоматическая очистка</b><br>После успешного создания видео программа автоматически удалит выбранные временные файлы для экономии места на диске."
 }
