--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -561,5 +561,14 @@
     "auto_shutdown_title": "Автоматичне вимкнення",
     "auto_shutdown_info": "Комп'ютер виконає дію '{action}' через {seconds} сек.",
     "cancel_action_button": "Скасувати",
-    "perform_now_button": "Виконати зараз"
+    "perform_now_button": "Виконати зараз",
+    "cleanup_group_title": "Очистка тимчасових файлів",
+    "auto_cleanup_label": "💾 Увімкнути автоматичну очистку",
+    "cleanup_images_label": "images (папка з картинками)",
+    "cleanup_image_prompts_label": "image_prompts.txt (файл з промтами для генерації картинок)",
+    "cleanup_translation_label": "translation.txt (файл з перекладом після редагування)",
+    "cleanup_translation_orig_label": "translation_orig.txt (файл з перекладом оригінал)",
+    "cleanup_voice_ass_label": "voice.ass (файл субтитрів)",
+    "cleanup_voice_mp3_label": "voice.mp3 (файл озвучки)",
+    "auto_cleanup_help": "<b>Автоматична очистка</b><br>Після успішного створення відео програма автоматично видалить вибрані тимчасові файли для економії місця на диску."
 }
