--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -287,6 +287,11 @@
     "image_count_label": "💾 Количество изображений:",
     "duration_per_image_label": "💾 Время на картинку:",
     "performance_group": "Производительность",
+    "use_gpu_shaders_label": "GPU Ускорение:",
+    "video_quality_label": "Качество видео:",
+    "video_quality_speed": "Скорость",
+    "video_quality_balanced": "Сбалансировано",
+    "video_quality_quality": "Качество",
     "whisper_engine_group": "Движок Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Стандартный (Python)",
