--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -287,6 +287,11 @@
     "image_count_label": "💾 Кількість зображень:",
     "duration_per_image_label": "💾 Час на картинку:",
     "performance_group": "Продуктивність",
+    "use_gpu_shaders_label": "GPU Прискорення:",
+    "video_quality_label": "Якість відео:",
+    "video_quality_speed": "Швидкість",
+    "video_quality_balanced": "Збалансовано",
+    "video_quality_quality": "Якість",
     "whisper_engine_group": "Рушій Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Стандартний (Python)",
