--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -286,6 +286,11 @@
     "image_count_label": "💾 Number of images:",
     "duration_per_image_label": "💾 Time per image:",
     "performance_group": "Performance",
+    "use_gpu_shaders_label": "GPU Acceleration:",
+    "video_quality_label": "Video Quality:",
+    "video_quality_speed": "Speed",
+    "video_quality_balanced": "Balanced",
+    "video_quality_quality": "Quality",
     "whisper_engine_group": "Whisper Engine",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Standard (Python)",
